[package]
name = "dune-mpf"
version = "0.1.0"
edition = "2024"

[lib]
name = "dune_mpf"
crate-type = ["cdylib", "lib"]

[dependencies]
dune-core = { path = "../dune-core" }

serde = { version = "1.0.210", features = ["derive", "serde_derive"] }
toml = "0.8.19"
pyo3 = "0.23.0"
serde_json = "1.0.133"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
pyo3-log = "0.12.1"
tracing-appender = "0.2.3"

[lints]
workspace = true
